--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -3,4 +3,4 @@
 	email = hello@sanchezcarlosjr.com
 	username = sanchezcarlosjr
 [core]
-        excludesfile = /home/sanchezcarlosjr/.dotfiles/git/.gitignore
+        excludesfile = $HOME/.dotfiles/git/.gitignore
