--- a/symlinks/conf.linux.yaml
+++ b/symlinks/conf.linux.yaml
@@ -9,3 +9,4 @@
     ~/.dotly: os/linux/.dotly
     ~/.config/alacritty/alacritty.yml: os/linux/alacritty.yml
     ~/.config/nvim/init.vim: editors/vim/init.vim
+    ~/.gitconfig: git/.gitconfig
