--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -3,4 +3,4 @@
 	email = hello@sanchezcarlosjr.com
 	username = sanchezcarlosjr
 [core]
-        excludesfile = $DOTFILES_PATH/git/.gitignore
+        excludesfile = ~/.dotfiles/git/.gitignore
