feat: change email

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	name = Carlos Eduardo Sanchez Torres (sanchezcarlosjr)
-	email = hello@sanchezcarlosjr.com
+	email = 24639141+sanchezcarlosjr@users.noreply.github.com
 	username = sanchezcarlosjr
 [core]
         excludesfile = ~/.dotfiles/git/.gitignore
