feat: new email

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,8 +1,12 @@
 [user]
 	name = Carlos Eduardo Sanchez Torres (sanchezcarlosjr)
-	email = hello@sanchezcarlosjr.com
+	email = 24639141+sanchezcarlosjr@users.noreply.github.com
 	username = sanchezcarlosjr
+	signingkey = DB57E52EDEE4E4D2
 [core]
         excludesfile = ~/.dotfiles/git/.gitignore
 [init]
 	defaultBranch = main
+
+[commit]
+	gpgsign = true
