--- a/symlinks/conf.linux.yaml
+++ b/symlinks/conf.linux.yaml
@@ -7,3 +7,5 @@
 
 - link:
     ~/.dotly: os/linux/.dotly
+    ~/.config/alacritty/alacritty.toml: os/linux/alacritty.toml
+    ~/.gitconfig: git/.gitconfig
