feat: remove raw paths

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,5 +1,5 @@
 [user]
-	name = Carlos Eduardo Sanchez Torres (sanchezcarlosjr)
+	name = sanchezcarlosjr
 	email = 24639141+sanchezcarlosjr@users.noreply.github.com
 	username = sanchezcarlosjr
 	signingkey = E2EEFA3FE1301D3A
