--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = modules/dotly
 	url = https://github.com/CodelyTV/dotly.git
 	branch = main
+[submodule "editors/nvim"]
+	path = editors/nvim
+	url = git@github.com:sanchezcarlosjr/nvim.git
