--- a/os/linux/alacritty.toml
+++ b/os/linux/alacritty.toml
@@ -39,19 +39,19 @@ TERM = "xterm-256color"
 size = 17
 
 [font.bold]
-family = "FiraCode NerdFont"
+family = "terminal-font"
 style = "Bold"
 
 [font.bold_italic]
-family = "FiraCode NerdFont"
+family = "terminal-font"
 style = "Bold Italic"
 
 [font.italic]
-family = "FiraCode NerdFont"
+family = "terminal-font"
 style = "Italic"
 
 [font.normal]
-family = "FiraCode NerdFont"
+family = "terminal-font"
 style = "Medium"
 
 [font.offset]
