--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -5,7 +5,13 @@
 	signingkey = E2EEFA3FE1301D3A
 [core]
   excludesfile = ~/.dotfiles/git/.gitignore
+	autocrlf = input
 [init]
 	defaultBranch = main
 [commit]
 	gpgsign = true
+[filter "lfs"]
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
+	clean = git-lfs clean -- %f
