--- a/.gitmodules
+++ b/.gitmodules
@@ -6,7 +6,6 @@
 	path = editors/nvim
   url = git@github.com:sanchezcarlosjr/nvim.git
   branch = main
-[submodule "secrets"]
-	path = secrets
-  url = git@github.com:sanchezcarlosjr/secrets.git
-  branch = main
+[submodule "vault"]
+	path = vault
+	url = git@github.com:sanchezcarlosjr/vault.git
