--- a/symlinks/conf.linux.yaml
+++ b/symlinks/conf.linux.yaml
@@ -8,5 +8,6 @@
 - link:
     ~/.dotly: os/linux/.dotly
     ~/.config/alacritty/alacritty.toml: os/linux/alacritty.toml
+    ~/.config/kitty/kitty.conf: os/linux/kitty.conf
     ~/.config/nvim: editors/nvim
     ~/.gitconfig: git/.gitconfig
