--- a/symlinks/conf.linux.yaml
+++ b/symlinks/conf.linux.yaml
@@ -1,10 +1,9 @@
-- clean: ['~']
-
+- clean:
+    - '~'
 - defaults:
     link:
       create: true
       force: true
-
 - link:
     ~/.dotly: os/linux/.dotly
     ~/.config/alacritty/alacritty.toml: os/linux/alacritty.toml
