--- a/symlinks/conf.macos.yaml
+++ b/symlinks/conf.macos.yaml
@@ -10,6 +10,9 @@
 
 - link:
     ~/.dotly: os/mac/.dotly
+    ~/.config/kitty/kitty.conf: os/linux/kitty.conf
+    ~/.config/nvim: editors/nvim
+    ~/.gitconfig: git/.gitconfig
     ~/bin/bash: /opt/homebrew/bin/bash
     ~/bin/date: /opt/homebrew/bin/gdate
     ~/bin/find: /opt/homebrew/bin/gfind
