chore: update from nvchad 2 to nvchad3

--- a/os/linux/kitty.conf
+++ b/os/linux/kitty.conf
@@ -2330,9 +2330,20 @@ background_opacity 0.7
 
 #: Miscellaneous {{{
 
-#: Show documentation
 
-# map kitty_mod+f1 show_kitty_doc overview
+
+#: Show documentation
+#
+
+# map kitty_mod+f1 show_kitty_doc /ctrl+loverview
+
+map ctrl+shift+c  no_op
+map ctrl+c  copy_to_clipboard
+map ctrl+v  paste_from_clipboard
+map shift+insert  paste_from_clipboard
+
+# Send SIGINT (Ctrl+C) on ctrl+shift+c  (see https://developer.run/36)
+map ctrl+shift+c send_text all \x03
 
 #: Toggle fullscreen
 
