--- a/.gitmodules
+++ b/.gitmodules
@@ -4,7 +4,7 @@
 	branch = main
 [submodule "editors/nvim"]
 	path = editors/nvim
-  url = git@github.com:sanchezcarlosjr/nvim.git
+  url = git@github.com:sanchezcarlosjr/nvchad.git
   branch = main
 [submodule "vault"]
 	path = vault
